# framework-migration-graph

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  EVALUATION.md  EVALUATION_RESULTS.md  ISSUES round2.md  ISSUES.md  USAGE.md  docker-compose.yml  neo4j_community_insights.json  neo4j_community_insights_angular21.json  neo4j_community_insights_new.json  pyproject.toml
.claude/: settings.json
.specify/: feature.json  init-options.json  integration.json
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
SpecKit-plans/: 004-paysafe-resolver-speckit-runbook.md  005-mcp-server-speckit-runbook.md  006-streamlit-ui-speckit-runbook.md  007-docker-speckit-runbook.md  009-community-insight-restructure-speckit-runbook.md  010-mcp-gap-analysis-fixes-speckit-runbook.md  012-migration-oracle-remediation-speckit-runbook.md
analysis/: framework-migration-scanning-results.md  mcp-tooling-gap-analysis.md  paysafe-wallet-swith-migration-analysis.md
contracts/: 003-framework-http-extractors.md
docker/: entrypoint.sh
docs/: SPEC_ORGANIZATION.md  export-extract-populate-framework-pipeline.md  extractor-research-report.md  findit-services-fetch.md  graph-mcp-skills-and-paysafe-resolution.md  graph-schema.md  legacy_graph_structure.md  mcp-tools-skills-prompts.md  migration-oracle-redesign.md
eval/: run_tool_selection.py
migration_oracle/: cli.py  config.py
scripts/: delete_all_migration_contexts.py  extract_yml_keys.sh  fix_artifact_paths.py  redeploy.sh  run_003b_verification.py  run_raw_extractions.sh  (+9 more)
(+470 files in other folders)
