[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migration-oracle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anyio>=4.0",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "sentence-transformers>=3.0",
    "mcp>=1.0",
    "streamlit>=1.35",
    "click>=8.1",
    "rapidfuzz>=3.0",
    "structlog>=24.0",
    "langchain-anthropic>=1.4.4",
    "langchain-ollama>=1.1.0",
]

[project.scripts]
migration-oracle = "migration_oracle.cli:main"
export-extract-populate-framework = "migration_oracle.cli:export_extract_populate_framework"

[tool.hatch.build.targets.wheel]
packages = ["migration_oracle"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
